placeholder-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placeholder
  labels:
    name: placeholder
