trisa.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trisa
  labels:
    name: trisa
