placeholder-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-placeholder-service
  namespace: placeholder
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: landing-placeholder
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: trisads-placeholder-service
  namespace: placeholder
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: trisads-placeholder
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: vaspbot-placeholder-service
  namespace: placeholder
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: vaspbot-placeholder
  type: NodePort
