placeholder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-placeholder-deployment
  namespace: trisa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-placeholder
  template:
    metadata:
      labels:
        app: landing-placeholder
    spec:
      containers:
      - name: landing-placeholder
        image: bbengfort/trisa-placeholder:landing
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaspbot-placeholder-deployment
  namespace: trisa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaspbot-placeholder
  template:
    metadata:
      labels:
        app: vaspbot-placeholder
    spec:
      containers:
      - name: vaspbot-placeholder
        image: bbengfort/trisa-placeholder:vaspbot
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: landing-placeholder-service
  namespace: trisa
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: landing-placeholder
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: vaspbot-placeholder-service
  namespace: trisa
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: vaspbot-placeholder
  type: NodePort
