trisads.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trisads
  namespace: trisa
  labels:
    app: trisads
spec:
  serviceName: trisads
  replicas: 1
  selector:
    matchLabels:
      app: trisads
  template:
    metadata:
      labels:
        app: trisads
    spec:
      containers:
      - name: trisads
        image: trisa/trisads:1c0e54b
        ports:
        - containerPort: 443
          protocol: TCP
          name: grpc
        volumeMounts:
        - name: dsdata
          mountPath: /data
        resources: {}
  volumeClaimTemplates:
  - metadata:
      name: dsdata
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: trisads-service
  namespace: trisa
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 443
    protocol: TCP
    targetPort: grpc
  selector:
    app: trisads
